--- a/test-app/src/app/components/field-input/field-input.component.html
+++ b/test-app/src/app/components/field-input/field-input.component.html
@@ -5,12 +5,11 @@
       [name]="name"
       [(ngModel)]="value"
       #inputControl="ngModel"
-      [required]="required"
+      [required]="true"
       [pattern]="pattern"
       class="inputField"
       [placeholder]="placeholder"
-      [mask]="mask"
-    />
+      [mask]="mask" />
     <ng-content></ng-content>
   </div>
 </div>
