--- a/test-app/src/app/app.component.css
+++ b/test-app/src/app/app.component.css
@@ -26,7 +26,6 @@ form label {
   align-items: center;
   padding-left: 20px;
   padding-right: 20px;
-  gap: 10px;
 }
 .fieldContainer label {
   font-size: 14px;
@@ -85,11 +84,18 @@ select.ng-touched.ng-invalid {
   padding-left: 5px;
   box-sizing: border-box;
 }
+.captchaField{
+  width: 100%;
+  height: 20px;
+  border-radius: 7px;
+  border: 2px solid gray;
+  outline: none;
+  padding-left: 10px;
+}
 .buttonContainer {
-  width: 40%;
-  padding-left: 31.7%;
-  padding-bottom: 40px;
+  width: 100%;
+  text-align: center;
 }
 button {
-  width: 100%;
+  width: 40%;
 }
