--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -1,40 +1,33 @@
-<form>
+<form #loginfo="ngForm" (ngSubmit)="onSubmit(loginForm)">
   <div class="titleContainer">
     <label>Напишите нам</label>
   </div>
-  <reusable-input-field label="Ваше имя:" [required]="true">
+  <input-field label="Ваше имя:">
     <man-icon-svg></man-icon-svg>
-  </reusable-input-field>
-  <reusable-input-field
+  </input-field>
+  <input-field
     label="Ваш Email:"
-    pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
-    [required]="true"
-  >
+    pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$">
     <email-icon-svg></email-icon-svg>
-  </reusable-input-field>
-  <reusable-input-field
+  </input-field>
+  <input-field
     label="Ваш телефон:"
     pattern="^8[0-9]{10}"
     mask="0-000-000-0000"
-    [required]="true"
-    placeholder="8-000-000-0000"
-  >
+    placeholder="8-000-000-0000">
     <phone-icon-svg></phone-icon-svg>
-  </reusable-input-field>
+  </input-field>
   <div class="fieldContainer">
     <label>Тема:</label>
     <select
       [(ngModel)]="loginForm.selectedTheme"
-      name="Theme"
+      name="ThemeList"
       class="inputContainer"
-      NonZero
-    >
+      NonZero>
       <option
-        *ngFor="let option of options"
-        [value]="option.id"
-        style="border-radius: 1rem"
-      >
-        {{ option.label }}
+        *ngFor="let theme of themes"
+        [value]="theme.id">
+        {{ theme.label }}
       </option>
     </select>
   </div>
@@ -45,24 +38,21 @@
       [(ngModel)]="loginForm.message"
       required
       name="messageField"
-      class="messageInput"
-    />
+      class="messageInput" />
   </div>
   <div class="fieldContainer">
     <label>Цифры:</label>
     <div class="inputContainer">
       <input
-        type="tel"
+        type="text"
         [(ngModel)]="loginForm.phoneNumber"
-        name="phoneNumber"
+        name="captchaCode"
         required
-        pattern="[0-9]{11}"
-        mask="0-000-000-0000"
-        class="inputField"
-      />
+        class="captchaField" />
+      <div [innerHTML]="captchaSvg"></div>
     </div>
   </div>
   <div class="buttonContainer">
-    <button (click)="printForm()">Войти</button>
+    <button type="submit" *ngIf="loginForm.invalid">Войти</button>
   </div>
 </form>
