--- a/test-app/src/app/components/field-input/field-input.component.html
+++ b/test-app/src/app/components/field-input/field-input.component.html
@@ -4,12 +4,12 @@
     <input
       [name]="name"
       [(ngModel)]="value"
-      #inputControl="ngModel"
       [required]="true"
       [pattern]="pattern"
       class="inputField"
       [placeholder]="placeholder"
-      [mask]="mask" />
+      [mask]="mask"
+      (blur)="onTouched()" />
     <ng-content></ng-content>
   </div>
 </div>
