--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -1,58 +1,2 @@
-<form #loginfo="ngForm" (ngSubmit)="onSubmit(loginForm)">
-  <div class="titleContainer">
-    <label>Напишите нам</label>
-  </div>
-  <input-field label="Ваше имя:">
-    <man-icon-svg></man-icon-svg>
-  </input-field>
-  <input-field
-    label="Ваш Email:"
-    pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$">
-    <email-icon-svg></email-icon-svg>
-  </input-field>
-  <input-field
-    label="Ваш телефон:"
-    pattern="^8[0-9]{10}"
-    mask="0-000-000-0000"
-    placeholder="8-000-000-0000">
-    <phone-icon-svg></phone-icon-svg>
-  </input-field>
-  <div class="fieldContainer">
-    <label>Тема:</label>
-    <select
-      [(ngModel)]="loginForm.selectedTheme"
-      name="ThemeList"
-      class="inputContainer"
-      NonZero>
-      <option
-        *ngFor="let theme of themes"
-        [value]="theme.id">
-        {{ theme.label }}
-      </option>
-    </select>
-  </div>
-  <div class="messageContainer">
-    <label>Ваше сообщение:</label>
-    <input
-      type="text"
-      [(ngModel)]="loginForm.message"
-      required
-      name="messageField"
-      class="messageInput" />
-  </div>
-  <div class="fieldContainer">
-    <label>Цифры:</label>
-    <div class="inputContainer">
-      <input
-        type="text"
-        [(ngModel)]="loginForm.phoneNumber"
-        name="captchaCode"
-        required
-        class="captchaField" />
-      <div [innerHTML]="captchaSvg"></div>
-    </div>
-  </div>
-  <div class="buttonContainer">
-    <button type="submit" *ngIf="loginForm.invalid">Войти</button>
-  </div>
-</form>
+<message-form (formSubmitted)="onFormSubmitted($event)"
+  *ngIf="!formValid"></message-form>
