--- a/test-app/src/app/components/mesage-form/mesage-form.html
+++ b/test-app/src/app/components/mesage-form/mesage-form.html
@@ -1,4 +1,4 @@
-<form #form="ngForm" (ngSubmit)="onSubmit(form)">
+<form #form="ngForm" (ngSubmit)="onSubmit()">
   <div class="titleContainer">
     <label>Напишите нам</label>
   </div>
